--- a/config/locales/simple_form.tw.yml
+++ b/config/locales/simple_form.tw.yml
@@ -14,6 +14,14 @@ zh-TW:
   activerecord:
     errors:
       models:
+        user:
+          attributes:
+            email:
+              taken: "此email已被使用了，請改用其他字串"
+              blank: "必填"
+            password:
+              blank: "必填"
+              too_short: "密碼長度不夠"
         podcast:
           attributes:
             name:
