--- a/config/locales/simple_form.tw.yml
+++ b/config/locales/simple_form.tw.yml
@@ -17,7 +17,7 @@ zh-TW:
         user:
           attributes:
             email:
-              taken: "此email已被使用了，請改用其他字串"
+              taken: "此 Email 已被使用了，請改用其他 Email"
               blank: "必填"
             password:
               blank: "必填"
