--- a/config/locales/devise.tw.yml
+++ b/config/locales/devise.tw.yml
@@ -71,4 +71,5 @@ zh-TW:
       not_found: "找不到。"
       not_locked: "並未被鎖定。"
       not_saved:
-        other: "有 %{count} 個錯誤導致 %{resource} 不能被儲存："
+        one: "1 error prohibited this %{resource} from being saved:"
+        other: "%{count} errors prohibited this %{resource} from being saved:"
