--- a/config/locales/simple_form.tw.yml
+++ b/config/locales/simple_form.tw.yml
@@ -49,6 +49,10 @@ zh-TW:
           attributes:
             content:
               blank: "必填"
+        donation:
+          attributes:
+            amount:
+              greater_than: "不得小於50元"
 
 
     # Examples
