--- a/config/locales/devise.tw.yml
+++ b/config/locales/devise.tw.yml
@@ -75,5 +75,5 @@ zh-TW:
       not_saved:
         one: "有錯誤導致 %{resource} 不能被儲存："
         other: "有 %{count} 個錯誤導致 %{resource} 不能被儲存："
-
+      record_invalid: "請填入資料"
 
