--- a/config/locales/devise.tw.yml
+++ b/config/locales/devise.tw.yml
@@ -65,7 +65,7 @@ zh-TW:
       unlocked: "您的帳號已被解鎖，現在已經登入。"
   errors:
     messages:
-      nvalid: "信箱無效"
+      invalid: "信箱無效"
       confirmation: "確認密碼錯誤"
       already_confirmed: "已經驗證，請直接登入。"
       confirmation_period_expired: "必須在 %{period} 內驗證，請重新申請。"
@@ -76,4 +76,4 @@ zh-TW:
         one: "有錯誤導致 %{resource} 不能被儲存："
         other: "有 %{count} 個錯誤導致 %{resource} 不能被儲存："
       record_invalid: "請填入資料"
-
+      blank: "上傳檔案"
